No longer creates dependency reduced pom

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <relocations>
                                 <relocation>
                                     <pattern>org.fusesource.jansi</pattern>
