Implement configurable messages

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -10,6 +10,10 @@ game-currently-full: "<red>This game is currently full, please try again later"
 joined-game: "<green>You just joined the cops and robbers game! Please respect the rules and have fun!"
 left-game: "<gray>You have left jail #{0}"
 jail-could-use-cops: "<blue>Your jail could use more cops! Type <yellow>'/cops'</yellow> to switch sides!"
+already-a-cop: "<red>You are already a cop"
+not-accepting-applications: "<red>New cop applications are not currently being accepted"
+already-applied-for-cop: "<red>You already applied to be a cop"
+applied-for-cop: "<blue>You have applied to be a cop"
 first-cop-selected: "<red>{0} <green>is the new cop in jail <yellow>#{1}</yellow>! Let the game begin!"
 first-cops-selected-2: "<green>{0} <dark_green>and <green>{1} <dark_green>are the new cops in jail <yellow>#{2}</yellow>!"
 first-cops-selected-3: "<dark_green><green>{0}</green>, <green>{1}</green, and <green>{2}</green> are the new cops in jail <yellow>#{3}</yellow>!"
