--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -18,6 +18,7 @@ first-cop-selected: "<red>{0} <green>is the new cop in jail <yellow>#{1}</yellow
 first-cops-selected-2: "<green>{0} <dark_green>and <green>{1} <dark_green>are the new cops in jail <yellow>#{2}</yellow>!"
 first-cops-selected-3: "<dark_green><green>{0}</green>, <green>{1}</green, and <green>{2}</green> are the new cops in jail <yellow>#{3}</yellow>!"
 cop-retired: "<green>A cop from jail <yellow>#{0}</yellow> has retired! Anybody can fill the vacancy! Robbers, type <yellow>'/cops'</yellow> to switch sides!"
+prison-access-granted: "<blue>Prison access granted. Welcome back, officer :)"
 report-bugs: "<purple>Please report any bugs or glitches! This allows us to ensure that everybody can have fun!"
 vulnerability-detected: "<gray>[<dark_red>!</dark_red>]</gray> <yellow>A vulnerability in jail <gold>#{0}</gold>'s security has been detected! Robbers, type '/open cells' quickly!"
 doors-malfunctioned: "<gray>[<dark_red>!</dark_red>]</gray> <red>The cell doors in jail <gold>#{0}</gold> are malfunctioning! Robbers, now's your chance!"
