Change to sole usage of colored logger implementation

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -8,6 +8,7 @@ not-time-for-command: "<red>It is not the time to use this command"
 game-does-not-exist: "<red>That game does not exist"
 game-currently-full: "<red>This game is currently full, please try again later"
 joined-game: "<green>You just joined the cops and robbers game! Please respect the rules and have fun!"
+already-in-game: "<red>You are already in that game"
 left-game: "<gray>You have left jail #{0}"
 jail-could-use-cops: "<blue>Your jail could use more cops! Type <yellow>'/cops'</yellow> to switch sides!"
 already-a-cop: "<red>You are already a cop"
