--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,3 +16,5 @@ permissions:
     default: true
   copsandrobbers.opencells:
     default: true
+  copsandrobbers.admin.itemdebug:
+    default: op
