Add 'halt' admin command for engine and individual sessions

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,10 +1,17 @@
 plugin-prefix: "<dark_red>[CopsAndRobbers] </dark_red>"
 engine-is-halted: "<red>Engine is currently halted, please contact an admin if you believe this is an error"
+session-is-halted: "<red>Session is not currently active, please contact an admin if you believe this is an error"
 candr-command-usage: "<red>Usage: /candr join [{0}], /candr leave, /candr quit"
 players-only-command: "<red>Only players may use this command"
 robbers-only-command: "<red>Only robbers may use this command"
 in-game-only-command: "<red>You must join a game to use this command"
 not-time-for-command: "<red>It is not the time to use this command"
+engine-already-halted: "<red>CopsAndRobbers engine is already halted"
+engine-not-halted: "<red>CopsAndRobbers engine is not currently halted"
+engine-now-halted: "<yellow>CopsAndRobbers engine has been manually halted: all sessions are suspended indefinitely"
+session-already-halted: "<red>Session is already halted"
+session-not-halted: "<red>Session is not currently halted"
+session-now-halted: "<yellow>Session #{0} has been manually halted"
 game-does-not-exist: "<red>That game does not exist"
 game-currently-full: "<red>This game is currently full, please try again later"
 joined-game: "<green>You just joined the cops and robbers game! Please respect the rules and have fun!"
