Implement candr subcommand for adding cop and robber items

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,5 +9,7 @@ permissions:
     default: true
   copsandrobbers.opencells:
     default: true
-  copsandrobbers.admin.itemdebug:
+  copsandrobbers.admin.item.add:
+    default: op
+  copsandrobbers.admin.item.debug:
     default: op
