Add admin command for saving and reloading engine settings

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,15 @@ permissions:
     default: true
   copsandrobbers.opencells:
     default: true
+  copsandrobbers.admin.halt:
+    default: op
+  copsandrobbers.admin.start:
+    default: op
   copsandrobbers.admin.item.add:
     default: op
   copsandrobbers.admin.item.debug:
+    default: op
+  copsandrobbers.admin.settings.save:
+    default: op
+  copsandrobbers.admin.settings.reload:
     default: op
