--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -14,6 +14,8 @@ session-already-halted: "<red>Session is already halted"
 session-not-halted: "<red>Session is not currently halted"
 session-now-halted: "<yellow>Session #{0} has been manually halted"
 session-now-resumed: "<green>Session #{0} has been resumed, players may now rejoin the game"
+saved-engine-settings: "<yellow>Successfully saved all settings for the CopsAndRobbers engine to file"
+reloaded-engine-settings: "<yellow>Successfully reloaded all settings for the CopsAndRobbers engine from file"
 game-does-not-exist: "<red>That game does not exist"
 game-currently-full: "<red>This game is currently full, please try again later"
 joined-game: "<green>You just joined the cops and robbers game! Please respect the rules and have fun!"
